erDiagram
    USERS {
        text id PK
        text name
        text email UK
        boolean email_verified
        text image
        text phone_number UK
        user_role role
        timestamp created_at
        timestamp updated_at
    }

    SESSIONS {
        text id PK
        text user_id FK
        text token UK
        timestamp expires_at
        text ip_address
        text user_agent
        timestamp created_at
        timestamp updated_at
    }

    ACCOUNTS {
        text id PK
        text user_id FK
        text account_id
        text provider_id
        text access_token
        text refresh_token
        timestamp access_token_expires_at
        timestamp refresh_token_expires_at
        text scope
        text id_token
        text password
        timestamp created_at
        timestamp updated_at
    }

    VERIFICATIONS {
        text id PK
        text identifier
        text value
        timestamp expires_at
        timestamp created_at
        timestamp updated_at
    }

    BUSINESS_PROFILES {
        uuid id PK
        text user_id FK
        text business_name
        text address
        numeric latitude
        numeric longitude
        timestamp updated_at
    }

    COURIER_PROFILES {
        uuid id PK
        text user_id FK
        text vehicle_type
        numeric rating
        integer rating_count
        boolean active
        numeric current_latitude
        numeric current_longitude
        timestamp last_location_at
        timestamp updated_at
    }

    DELIVERY_REQUESTS {
        uuid id PK
        text business_id FK
        text assigned_courier_id FK
        trip_status status
        text pickup_address
        text dropoff_address
        numeric pickup_latitude
        numeric pickup_longitude
        numeric dropoff_latitude
        numeric dropoff_longitude
        text pickup_place_id
        text dropoff_place_id
        text notes
        numeric estimated_distance_km
        numeric estimated_duration_minutes
        timestamp dispatch_started_at
        timestamp requested_at
        timestamp accepted_at
        timestamp completed_at
    }

    TRIP_RATINGS {
        uuid id PK
        uuid trip_id FK
        text rater_id FK
        text rated_id FK
        integer stars
        text comment
        timestamp created_at
    }

    TRIP_DECLINES {
        uuid id PK
        uuid trip_id FK
        text courier_id FK
        timestamp created_at
    }

    TRIP_EVENTS {
        uuid id PK
        uuid trip_id FK
        text actor_id FK
        text event_type
        text payload
        timestamp created_at
    }

    USERS ||--o| BUSINESS_PROFILES : owns
    USERS ||--o| COURIER_PROFILES : owns
    USERS ||--o{ SESSIONS : auth sessions
    USERS ||--o{ ACCOUNTS : oauth accounts
    USERS ||--o{ VERIFICATIONS : verification records
    USERS ||--o{ DELIVERY_REQUESTS : creates as business
    USERS ||--o{ DELIVERY_REQUESTS : assigned as courier
    USERS ||--o{ TRIP_RATINGS : rates
    USERS ||--o{ TRIP_RATINGS : is rated
    USERS ||--o{ TRIP_DECLINES : declines
    USERS ||--o{ TRIP_EVENTS : acts in
    DELIVERY_REQUESTS ||--o{ TRIP_RATINGS : receives ratings
    DELIVERY_REQUESTS ||--o{ TRIP_DECLINES : tracks declines
    DELIVERY_REQUESTS ||--o{ TRIP_EVENTS : logs events